--- a/composer.json
+++ b/composer.json
@@ -20,26 +20,9 @@
         "illuminate/support": "5.*",
         "jeroennoten/laravel-adminlte":"1.*",
         "laravelcollective/html": "5.*",
-        "laravel/socialite": "3.*",
-        "laracasts/flash": "3.*",
-        "cviebrock/eloquent-sluggable":"^4.5",
-        "nwidart/laravel-menus": "4.*",
-        "league/oauth2-client": "^1.4",
-        "plank/laravel-mediable": "^2.3",
-        "cartalyst/tags": "8.*",
-        "beyondcode/laravel-comments": "1.*",
-        "jrean/laravel-user-verification": "7.*",
-        "felixkiss/uniquewith-validator": "3.*",
-        "lithiumdev/laravel-tagcloud": "1.*",
         "guzzlehttp/guzzle": "6.*",
-        "laravelium/feed": "3.*",
-        "spatie/laravel-activitylog": "3.*",
-        "spatie/laravel-analytics": "3.*",
-        "spatie/laravel-permission": "2.*",
         "tymon/jwt-auth": "1.*",
-        "barryvdh/laravel-cors": "0.11.*",
-        "consoletvs/charts": "6.*",
-        "laravel-notification-channels/webpush": "3.*"
+        "barryvdh/laravel-cors": "0.11.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "~6.0",        
@@ -69,5 +52,15 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Bishopm\\Churchsite\\Providers\\ChurchsiteServiceProvider"
+            ]
+        }
     }
 }
