--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "laravelcollective/html": "5.*",
         "guzzlehttp/guzzle": "6.*",
         "tymon/jwt-auth": "1.*",
-        "barryvdh/laravel-cors": "0.11.*"
+        "barryvdh/laravel-cors": "0.11.*",
+        "doctrine/dbal": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "~6.0",        
