--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "guzzlehttp/guzzle": "6.*",
         "tymon/jwt-auth": "1.*",
         "barryvdh/laravel-cors": "0.11.*",
-        "doctrine/dbal": "2.*"
+        "doctrine/dbal": "2.*",
+        "spatie/laravel-view-models": "1.*",
+        "spatie/laravel-tags": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "~6.0",        
