--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "barryvdh/laravel-cors": "0.11.*",
         "doctrine/dbal": "2.*",
         "spatie/laravel-view-models": "1.*",
-        "spatie/laravel-tags": "2.*"
+        "spatie/laravel-tags": "2.*",
+        "nwidart/laravel-menus": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit" : "~6.0",        
