--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "barryvdh/laravel-cors": "0.11.*",
         "spatie/laravel-view-models": "1.*",
         "spatie/laravel-tags": "2.*",
-        "nwidart/laravel-menus": "dev-master"
+        "bishopm/laravel-menu": "dev-master"
     },
     "autoload": {
         "psr-4": {
