--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "tymon/jwt-auth": "1.*",
         "spatie/laravel-view-models": "1.*",
         "spatie/laravel-tags": "2.*",
-        "bishopm/laravel-menu": "dev-master"
+        "spatie/laravel-menu": "3.*"
     },
     "autoload": {
         "psr-4": {
