--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "illuminate/support": "7.*",
         "jeroennoten/laravel-adminlte":"3.*",
         "laravelcollective/html": "6.*",
+        "laravel/ui": "2.*",
         "tymon/jwt-auth": "1.*",
         "spatie/laravel-view-models": "1.*",
         "spatie/laravel-tags": "2.*",
