--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "laravel/ui": "2.*",
         "tymon/jwt-auth": "1.*",
         "spatie/laravel-view-models": "1.*",
-        "spatie/laravel-tags": "2.*",
-        "spatie/laravel-menu": "3.*"
+        "spatie/laravel-tags": "2.*"
     },
     "autoload": {
         "psr-4": {
