--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravelcollective/html": "6.*",
         "laravel/ui": "2.*",
         "tymon/jwt-auth": "1.*",
+        "haruncpi/laravel-simple-filemanager": "1.*",
         "spatie/laravel-view-models": "1.*",
         "spatie/laravel-tags": "2.*"
     },
